Fixing glitch about Sign-in promo height in bookmarks

-[BookmarkFolderCollectionView cellSizeForIndexPath:] can use the
current cell to compute its height when reloading. So when
BookmarkFolderCollectionView receives the notification to update the
SigninPromoView, the view has to be updated even if the section is
reloaded.

BUG=725040

Review-Url: https://codereview.chromium.org/2895173003
Cr-Commit-Position: refs/heads/master@{#473868}

Former-commit-id: 50dd2bde25f729081248de4c835d1ef99c695754